fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 	--light: #f0f6ff;
 	--dark: brown;
 }
+body {
+	overflow-x: hidden;
+}
 
 /*** Spinner ***/
 #spinner {
